# agent-helper-scripts

./: .gitattributes  .gitignore  DEVELOPMENT.md  Makefile  README.md  ROADMAP.md  SUPPORTED_VERSIONS.md  add-repositories  apt-update-if-stale  bootstrap-adapters  bootstrap-common  get-ai-tooling  get-github-tooling  get-markdown-tooling  get-open-tofu-tooling  get-postgresql  get-pr  get-project  get-python-tooling  get-rust-tooling  get-typescript-tooling  install-hooks  install-required-apt-packages  install-skills  install-sub-agents  markdownlint  mdformat-all  notdeadyet  pyproject.toml  python-setup  rust-entrypoint  rust-entrypoint-home  rust-entrypoint-system  rust-setup  typos.local.toml  typos.toml
.github/: dependabot.yml
agents/: subagents.yml
data/: typos-oxendict-base.toml
docs/: cmd-mox-users-guide.md  cuprum-users-guide.md  developers-guide.md  helper-repo-bootstrap.md  migration-guide.md  odw-skills-users-guide.md  srgn.md  users-guide.md
hooks/: post-turn-quality-stop-hook.py  test_post_turn_quality_stop_hook.py
scripts/: typos_rollout.py  typos_rollout_cache.py  typos_rollout_check.py  typos_rollout_cli.py  typos_rollout_harvest.py  typos_rollout_http.py  typos_rollout_policy.py  typos_rollout_render.py
tests/: conftest.py  subagent_manifest.py  test_bootstrap_common.py  test_bootstrap_common_properties.py  test_install_verus.py  test_makefile_checks.py  test_run_verus.py  test_rust_entrypoints.py  test_subagent_definitions.py  test_subagent_manifest.py  test_typos_rollout.py  test_typos_rollout_http_security.py  test_typos_spelling_gate.py  (+7 more)
(+69 files in other folders)
